--- a/package.json
+++ b/package.json
@@ -4,21 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll --verbose --coverage"
+    "test": "jest --watchAll --verbose --coverage",
+    "start": "node index.js"
+  },
+  "engines": {
+    "node": "10.9.0"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^2.0.1",
+    "compression": "^1.7.3",
     "config": "^3.0.1",
     "express": "^4.16.2",
     "express-async-errors": "^3.1.1",
+    "helmet": "^3.15.0",
     "joi": "^13.1.0",
     "joi-objectid": "^2.0.0",
     "joi-password-complexity": "^2.0.1",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
+    "moment": "^2.23.0",
     "mongoose": "^5.3.16",
     "winston": "^3.1.0",
     "winston-mongodb": "^4.0.3"
